MOJ-210: fixed some play layout issues, fixed resize issue on test output

--- a/src/main/resources/static/css/play.css
+++ b/src/main/resources/static/css/play.css
@@ -95,7 +95,7 @@ body .cm-s-default .cm-variable-2 {
     font-size: 18px;
 }
 
-div.file-content {
+div.content {
     overflow-y: scroll;
 }
 
